nome do input da forma de pagamento

--- a/templates/acesso.html
+++ b/templates/acesso.html
@@ -9,7 +9,7 @@
 <form action="/echo" method="POST">
 <p>Nome:  <input name="nome"></p>
 <p>CPF:  <input name="cpf"></p>
-<p>Forma de Pagamento: <input list=formas_pagamento></p>
+<p>Forma de Pagamento: <input list=formas_pagamento name = "formas_pagamento"></p>
 
 <datalist id="formas_pagamento">
     <option value = "Dinheiro">
