--- a/templates/restaurante.html
+++ b/templates/restaurante.html
@@ -20,7 +20,7 @@
                 <option value = {{ lista_restaurantes[2] }}>
             </datalist>
 
-        <input value="Acessar" type="submit">
+        <input value="Comprar" type="submit">
 
     </form>    
 
