--- a/templates/refeicao.html
+++ b/templates/refeicao.html
@@ -25,7 +25,9 @@
         
         <p>Desejar retirar algum ingrediente da sua refeição ?<input type="checkbox" name="completo" id="completo"> </p>
            
-        ##<p>Deseja comprar bebida? <input type="checkbox" id="bebida" name="bebida">  </p>
+        ## talvez seja melhor botar opção de bebida, que nem a de comida
+        ##<p>Deseja comprar bebida? <input type="checkbox" id="bebida" name="bebida">  </p>##
+        
         <p>Escolha a sua bebida <input list="refeicao" name="refeicao"></p>
 
         <datalist id="bebida">
