--- a/templates/refeicao.html
+++ b/templates/refeicao.html
@@ -31,9 +31,9 @@
         <p>Escolha a sua bebida <input list="refeicao" name="refeicao"></p>
 
         <datalist id="bebida">
-              <!--  <option value = {{ refeicao[0] }}>
-                <option value = {{ refeicao[1] }}>
-                <option value = {{ refeicao[2] }}> -->
+              <!--  <option value = {{ bebida[0] }}>
+                <option value = {{ bebida[1] }}>
+                <option value = {{ bebida[2] }}> -->
                 <option value = "Refrigerante">
                 <option value = "Água">
                 <option value = "Nenhuma">    
