--- a/templates/dados.html
+++ b/templates/dados.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Seus dados</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
-</head>
-<body>
+     <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+        <script src="main.js"></script>
+     </head>
 
-    <form action="" method="POST">
-
-            <p>Nome:  <input name="nome"></p>
-            <p>CPF:  <input name="cpf"></p>
-            <p>Forma de Pagamento: <input list=formas_pagamento name = "formas_pagamento"></p>
-            
-            <datalist id="formas_pagamento">
+    <body>
+        <h2><p> sem {{ arroz }} {{ feijao }} {{ tomate }} {{ alface }} {{ batatafrita }} {{ ovofrito }} {{ farofa }} {{ cenoura }}</p></h2>
+            <form action="/fim" method="POST">
+                <p>Nome:  <input name="nome"></p>
+                <p>CPF:  <input name="cpf"></p>
+                <p>Forma de Pagamento: <input list=formas_pagamento name = "formas_pagamento"></p>
+                <datalist id="formas_pagamento">
                 <option value = "Dinheiro">
                 <option value = "Cartão de Crédito">
                 <option value = "Cartão de Débito">
-            </datalist>
-            
-            <input value="Comprar refeição" type="submit">
+                </datalist>
 
-    </form>
-</body>
+                <input value="Comprar refeição" type="submit">
+            </form>
+    </body>
+
 </html>
