alteracao no html do ingrediente para passar refeicao e bebida

--- a/templates/dados.html
+++ b/templates/dados.html
@@ -9,7 +9,8 @@
      </head>
 
     <body>
-        <h2><p> sem {{ arroz }} {{ feijao }} {{ tomate }} {{ alface }} {{ batatafrita }} {{ ovofrito }} {{ farofa }} {{ cenoura }}</p></h2>
+        <h1>{{ refeicao_escolhida }} com {{ bebida_escolhida }}</h1>
+        <h2><p> Sem {{ arroz }} {{ feijao }} {{ tomate }} {{ alface }} {{ batatafrita }} {{ ovofrito }} {{ farofa }} {{ cenoura }}</p></h2>
             <form action="/fim" method="POST">
                 <p>Nome:  <input name="nome"></p>
                 <p>CPF:  <input name="cpf"></p>
