--- a/templates/ingrediente.html
+++ b/templates/ingrediente.html
@@ -6,38 +6,47 @@
     <title>Completo?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js">
-
-        document.getElementById('refeicao_escolhida').value = {{ refeicao_escolhida }};
-        document.getElementById('bebida_escolhida').value = {{ bebida_escolhida }};
-
-
-    </script>
 </head>
+<script type="text/javascript">
+
+    function passarValores(){
+    
+        document.getElementById("refeicao_escolhida").setAttribute('value','My default value');
+        document.getElementById("bebida_escolhida").value  = "'",{{ bebida_escolhida }}, "'";
+        //document.getElementById("bebida_escolhida").value = {{ bebida_escolhida }};
+    }
+</script>
 <body>
 
     <h2><p> {{ refeicao_escolhida }} com {{ bebida_escolhida }}</p></h2>
 
     <form action="\dados" method="POST">
 
-        <h3><p>Deseja retirar algo ?</p></h3>
+        <h3><p>Deseja acrescentar algo ?</p></h3>
 
-        <p>Arroz<input type="checkbox" name="Arroz"></p>
-        <p>Feijão<input type="checkbox" name="Feijão"></p>
-        <p>Tomate<input type="checkbox" name="Tomate"></p>
-        <p>Alface<input type="checkbox" name="Alface"></p>
-        <p>Batata Frita<input type="checkbox" name="Batata Frita"></p>
-        <p>Ovo Frito<input type="checkbox" name="Ovo frito"></p>
-        <p>Farofa<input type="checkbox" name="Farofa"></p>
-        <p>Cenoura<input type="checkbox" name="Cenoura"></p>
+        <p>Arroz<input type="checkbox" name="arroz"></p>
+        <p>Feijão<input type="checkbox" name="feijao"></p>
+        <p>Tomate<input type="checkbox" name="tomate"></p>
+        <p>Alface<input type="checkbox" name="alface"></p>
+        <p>Batata Frita<input type="checkbox" name="batatafrita"></p>
+        <p>Ovo Frito<input type="checkbox" name="ovofrito"></p>
+        <p>Farofa<input type="checkbox" name="farofa"></p>
+        <p>Cenoura<input type="checkbox" name="cenoura"></p>
 
-        <input type="hidden" id ="refeicao_escolhida" name = "refeicao_escolhida" value="">
-    
-        <input type="hidden" id ="bebida_escolhida" name = "bebida_escolhida" value="">
+        <input type="hidden" id="refeicao_escolhida" name="refeicao_escolhida" value=""/>
 
+        <input type="hidden" id="bebida_escolhida" name="bebida_escolhida" value=""/>
+        
+        <script>
+                passarValores();
+        </script>
 
         <input type="submit" value="Enviar pedido">
 
     </form>
+
+
+
 </body>
+
 </html>
