--- a/templates/fim.html
+++ b/templates/fim.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-
 <html>
-
-
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
+</head>
 <body>
+    <h1>Pedido Realizado com Sucesso!</h1>
 
-
-<h1>Pedido realizado</h1>
-
+    Restaurante: {{ restaurante_escolhido }}<br>
+    Nome: {{ nome }} <br>
+    Forma de pagamento: {{ forma_pagamento }} <br>
+    Refeição:{{ refeicao_escolhida }}<br>
+    Bebida: {{ bebida_escolhida }}<br>
 
 </body>
-
 </html>
