--- a/templates/restaurante.html
+++ b/templates/restaurante.html
@@ -12,7 +12,7 @@
 
     <form action="\pedido" method="POST">
         
-        <p>Escolha o restaurante <input list=lista_restaurantes name = "lista_restaurantes"></p>
+        <p>Escolha o restaurante <input list=lista_restaurantes name = "restaurante_escolhido"></p>
 
         <datalist id="lista_restaurantes">
                 <option value = {{ lista_restaurantes[0] }}>
