criacao da classe bebida e reestruturacao do database

--- a/templates/restaurante.html
+++ b/templates/restaurante.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <title>app proximo</title>
+    <title>Proximo</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -15,7 +15,7 @@
 
 <!-- Header -->
     <header class="w3-container w3-red w3-center" style="padding:50px 16px">
-      <h1 class="w3-margin w3-jumbo">app próximo</h1>
+      <h1 class="w3-margin w3-jumbo">App Próximo</h1>
     </header>
 
     <body>
@@ -31,7 +31,7 @@
         <div class="w3-row-padding w3-padding-64 w3-container">
           <div class="w3-content">
             <div class="w3-twothird">
-              <h1>catálogo de restaurantes</h1>
+              <h1>Catálogo de Restaurantes</h1>
               <h5 class="w3-padding-32">
               		<div class="restaurantsList">
         			<ul class="list">
