--- a/templates/refeicao.html
+++ b/templates/refeicao.html
@@ -1,5 +1,5 @@
 <html>
-    <title>app proximo</title>
+    <title>App Proximo</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -15,7 +15,7 @@
 <body>
     <!-- Header -->
     <header class="w3-container w3-red w3-center" style="padding:50px 8px">
-      <h1 class="w3-margin w3-jumbo">menu do {{restaurante.nome}}</h1>
+      <h1 class="w3-margin w3-jumbo">Menu do {{restaurante.nome}}</h1>
     </header>
 
     <!-- Barra superior -->
@@ -30,14 +30,14 @@
     <div class="w3-row-padding w3-padding-64 w3-container">
         <div class="w3-content">
             <div class="w3-twothird">
-              <h1>pratos</h1>
+              <h1>Pratos</h1>
               <h5 class="w3-padding-32">
               		<div class="Pratos">
         			<ul class="list">
         			    {%for item in menu_restaurante%}
 				            {%if item.categoria == 'Refeicao'%}
 					        <li><span id="nome">{{item.nome}}</span> <span id="preco">{{item.preco}}</span></li>
-					        <a href="{{url_for('pedido', restaurante_id=restaurante.id)}}">comprar</a>
+					        <a href="{{url_for('pedido', restaurante_id=restaurante.id)}}">Comprar</a>
 				            {%endif%}
 			            {%endfor%}
 
@@ -57,7 +57,7 @@
         			    {%for item in menu_restaurante%}
 				            {%if item.categoria == 'Bebida'%}
 					        <li><span id="nome">{{item.nome}}</span> <span id="preco">{{item.preco}}</span></li>
-					        <a href="{{url_for('pedido', restaurante_id=restaurante.id)}}">comprar</a>
+					        <a href="{{url_for('pedido', restaurante_id=restaurante.id)}}">Comprar</a>
 				            {%endif%}
 			            {%endfor%}
 
