--- a/templates/dados.html
+++ b/templates/dados.html
@@ -1,29 +1,48 @@
 <!DOCTYPE html>
 <html>
-     <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-        <script src="main.js"></script>
-     </head>
+    <title>App Proximo</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+    body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+    .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+    .fa-coffee {font-size:180px}
+    </style>
 
-    <body>
-        <h1>{{ refeicao_escolhida }} e {{ bebida_escolhida }}</h1>
+<body>
+    <!-- Header -->
+    <header class="w3-container w3-red w3-center" style="padding:50px 8px">
+      <h1 class="w3-margin w3-jumbo">Menu do {{restaurante.nome}}</h1>
+    </header>
 
-        <h2><p> Adicional: {{ arroz }} {{ feijao }} {{ tomate }} {{ alface }} {{ batatafrita }} {{ ovofrito }} {{ farofa }} {{ cenoura }}</p></h2>
-            <form action="/fim" method="POST">
-                <p>Nome:  <input name="nome"></p>
-                <p>CPF:  <input name="cpf"></p>
-                <p>Forma de Pagamento: <input list=formas_pagamento name = "formas_pagamento"></p>
-                <datalist id="formas_pagamento">
-                <option value = "Dinheiro">
-                <option value = "Cartão de Crédito">
-                <option value = "Cartão de Débito">
-                </datalist>
+    <!-- Barra superior -->
+        <div class="w3-top">
+          <div class="w3-bar w3-red w3-card w3-left-align w3-large">
+            <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="hello()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+            <a href="http://caroluchoa.pythonanywhere.com/" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+          </div>
+         </div>
 
-                <input value="Comprar refeição" type="submit">
-            </form>
-    </body>
+         <body>
+                <h1 style="text-align: center">{{ refeicao_escolhida.nome }} e {{ bebida_escolhida.nome }}</h1>
+                    <form class="w3-row-padding w3-padding-64 w3-container" style="text-align: center" action="/fim" method="POST">
+                        <p>Nome:  <input name="nome"></p>
+                        <p>CPF:  <input name="cpf"></p>
+                        <p>Forma de Pagamento: <input list=formas_pagamento name = "formas_pagamento"></p>
+                        <datalist id="formas_pagamento">
+                        <option value = "Dinheiro">
+                        <option value = "Cartão de Crédito">
+                        <option value = "Cartão de Débito">
+                        </datalist>
+                        
+                        <input value="Comprar refeição" type="submit">
+                    </form>
+            </body>
 
-</html>
+            <a href="{{url_for('pedido', restaurante_id=restaurante.id, bebida_id=bebida_escolhida.id, refeicao_id=refeicao_escolhida.id )}}">Efetuar pedido</a>
+
+</body>
