--- a/templates/fim.html
+++ b/templates/fim.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-
 <html>
-
+    <title>App Proximo</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+    body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+    .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+    .fa-coffee {font-size:180px}
+    </style>
 
 <body>
-
-
-<h1>Pedido realizado com sucesso ! </h1>
-
+    <!-- Header -->
+    <header class="w3-container w3-red w3-center" style="padding:50px 8px">
+      <h1 class="w3-margin w3-jumbo">Pedido Realizado com Sucesso !</h1>
+    </header>
 
 </body>
-
 </html>
