criacao do atributo de preco do pedido e campo obs

--- a/templates/dados.html
+++ b/templates/dados.html
@@ -38,6 +38,8 @@
                     <option value = "Cartão de Débito">
                 </datalist>
 
+                <p>Observação: <input type="text" name = "obs" value="Deseja tirar algo ?"></p>
+
                 <input type="hidden" name="refeicao_escolhida" value= '{{ refeicao_escolhida.id }}'>
                 <input type="hidden" name="bebida_escolhida" value= '{{ bebida_escolhida.id }}'>
                 <input type="hidden" name="restaurante" value= '{{ restaurante.id }}'>
