--- a/templates/fim.html
+++ b/templates/fim.html
@@ -19,5 +19,9 @@
       <h1 class="w3-margin w3-jumbo">Pedido Realizado com Sucesso !</h1>
     </header>
 
+    <div style="text-align: center">
+        <h2>Efetue o pagamento no caixa ! <br> Valor: R$ {{ preco }}</h2>
+    </div>
+
 </body>
 </html>
