--- a/templates/admin.html
+++ b/templates/admin.html
@@ -15,7 +15,7 @@
 
 <!-- Header -->
     <header class="w3-container w3-red w3-center" style="padding:50px 16px">
-      <h1 class="w3-margin w3-jumbo">Admin</h1>
+      <h1 class="w3-margin w3-jumbo">Gerenciamento</h1>
     </header>
 
     <body>
@@ -28,12 +28,12 @@
 
 <!-- Corpo -->
 
-        <div class="w3-row-padding w3-padding-64 w3-container">
+        <div  class="w3-row-padding w3-padding-64 w3-container">
           <div class="w3-content">
-            <div class="w3-twothird">
-                <a href="{{url_for('cadastrarRestaurante'}}">Cadastrar restaurante</a> <br> 
-                <a href="{{url_for('cadastrarRefeicao'}}">Cadastrar refeição</a> <br>
-                <a href="{{url_for('cadastrarBebida'}}">Cadastrar bebida</a> <br> 
+            <div class="w3-twothird" style="text-align: center">
+                <a href="{{url_for('cadastrarRestaurante')}}">Cadastrar restaurante</a> <br> 
+                <a href="{{url_for('cadastrarRefeicao')}}">Cadastrar refeição</a> <br>
+                <a href="{{url_for('cadastrarBebida')}}">Cadastrar bebida</a> <br> 
             </div>
           </div>
         </div>
