Visualizacao dos pedidos ok

--- a/templates/dados.html
+++ b/templates/dados.html
@@ -34,8 +34,8 @@
                 <p>Forma de Pagamento: <input list=formas_pagamento name = "pagamento"></p>
                 <datalist id="formas_pagamento">
                     <option value = "Dinheiro">
-                    <option value = "Cartão de Crédito">
-                    <option value = "Cartão de Débito">
+                    <option value = "Cartao de Credito">
+                    <option value = "Cartao de Debito">
                 </datalist>
 
                 <p>Observação: <input type="text" name = "obs" value="Deseja tirar algo ?"></p>
