--- a/templates/fim.html
+++ b/templates/fim.html
@@ -18,6 +18,12 @@
     <header class="w3-container w3-red w3-center" style="padding:50px 8px">
       <h1 class="w3-margin w3-jumbo">Pedido Realizado com Sucesso !</h1>
     </header>
+    <div class="w3-top">
+        <div class="w3-bar w3-red w3-card w3-left-align w3-large">
+          <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="hello()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+          <a href="/" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+        </div>
+       </div>
 
     <div style="text-align: center">
         <h2>Efetue o pagamento no caixa ! <br> Valor: R$ {{ preco }}</h2>
