paginas de cadastro de refeicao, bebida e restaurante funcionando

--- a/templates/addBebida.html
+++ b/templates/addBebida.html
@@ -26,5 +26,19 @@
           </div>
          </div>
 
+         <form action="/admin_page/bebida/cadastrar" method="POST">
+
+          <p>Nome do Restaurante: <input type="text" name="restaurante_nome"> </p>
+
+          <p>Nome da Bebida: <input type="text" name="bebida_nome"> </p>
+
+          <p>Valor da Bebida: <input type="text" name="bebida_preco"> </p>
+
+          <p><input type="submit" value="Cadastrar"> </p>
+
+         </form>
+
+
+
     </body>
 </html>
