--- a/templates/addRefeicao.html
+++ b/templates/addRefeicao.html
@@ -26,5 +26,19 @@
           </div>
          </div>
 
+         <form action="/admin_page/refeicao/cadastrar" method="POST">
+
+          <p>Nome do Restaurante: <input type="text" name="restaurante_nome"> </p>
+
+          <p>Nome da Refeição: <input type="text" name="refeicao_nome"> </p>
+
+          <p>Valor da Refeição: <input type="text" name="refeicao_preco"> </p>
+
+          <p><input type="submit" value="Cadastrar"> </p>
+
+         </form>
+
+
+
     </body>
 </html>
