--- a/templates/addRestaurante.html
+++ b/templates/addRestaurante.html
@@ -22,9 +22,21 @@
         <div class="w3-top">
           <div class="w3-bar w3-red w3-card w3-left-align w3-large">
             <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="hello()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-            <a href="/admin_page" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+            <a href="/" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+            <a href="/login" class="w3-bar-item w3-button w3-padding-large w3-white">Login</a>
+            <a href="/listar_pedidos" class="w3-bar-item w3-button w3-padding-large w3-white">Ver Pedidos</a>
           </div>
          </div>
+
+         <form style="text-align: center" action="/admin_page/restaurante/cadastrar" method="POST">
+
+          <p>Nome do Restaurante: <input type="text" name="restaurante_nome"> </p>
+
+          <p><input type="submit" value="Cadastrar"> </p>
+
+         </form>
+
+
 
     </body>
 </html>
