--- a/templates/selecionarRestaurante.html
+++ b/templates/selecionarRestaurante.html
@@ -22,7 +22,9 @@
         <div class="w3-top">
           <div class="w3-bar w3-red w3-card w3-left-align w3-large">
             <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="hello()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-            <a href="/listar_pedidos" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+            <a href="/" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+            <a href="/login" class="w3-bar-item w3-button w3-padding-large w3-white">Login</a>
+            <a href="/listar_pedidos" class="w3-bar-item w3-button w3-padding-large w3-white">Ver Pedidos</a>
           </div>
          </div>
 
